# rdiff

./: .gitignore  CMakeLists.txt  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.js
.github/workflows/: check.yml
prebuild/darwin-x64/: rdiff.node
prebuild/linux-x64/: rdiff.node
prebuild/win32-x64/: rdiff.node
src/: rdiff.cpp  rdiff.h
src/librsync/: config.h  config.h.in  librsync_export.h
tests/: new_file  old_file
